tests/parser/t8846.nim
discard """
  errormsg: "invalid indentation"
  line: 7
  column: 25
"""

type ObjectLike = object|int|tuple
